Fix image stretch in safari

--- a/src/components/Picture/picture.scss
+++ b/src/components/Picture/picture.scss
@@ -8,6 +8,7 @@
       width: 25%;
       margin: 2% 5% 2%;
       border-radius: 25%;
+      align-self: flex-start;
       box-shadow: 1px 2px 14px -1px rgba(0,0,0,0.66);
     }
 
